testsuite/bsc.codegen/strings/IntegerToChar_OutOfRange_Low.bsv
(* synthesize *)
module sysIntegerToChar_OutOfRange_Low();
   rule r;
      $display(integerToChar(-1));
   endrule
endmodule
